# cognitive-response-similarity-engine

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
app/: streamlit_app.py
crse/: __init__.py  brain_regions.py  brain_viewer_export.py  cli.py  downloader.py  engine.py  prediction_export.py  runpod_client.py  similarity.py  tribe_plot.py  visualization.py
runpod/: Dockerfile  handler.py  patch_tribev2_whisperx.py
tests/: test_similarity.py
