[project]
name = "crse"
version = "0.1.0"
description = "Cognitive Response Similarity Engine — Compare neural response patterns between videos using Meta TRIBE v2"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Abhinav Putta"}]
keywords = [
    "neuroscience",
    "brain-encoding",
    "fMRI",
    "video-comparison",
    "cognitive-similarity",
    "tribe-v2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "tribev2",
    "numpy>=2.0",
    "scipy",
    "torch>=2.5",
    "nilearn",
    "matplotlib",
    "rich",
    "click",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.30",
    "plotly",
]
runpod = [
    "runpod",
    "requests",
]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
crse = "crse.cli:main"

[project.urls]
Homepage = "https://github.com/ABHINAVVV13/cognitive-response-similarity-engine"
Repository = "https://github.com/ABHINAVVV13/cognitive-response-similarity-engine"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crse"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
